<resources>
    <string name="app_name">Splitwise</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vp1">Splitwise keeps track of balances between friends.</string>
    <string name="hello">Welcome to Splitwise, UserName!</string>
    <string name="addexp">Add Expense</string>
    <string name="splitexp">You can split expense with groups or with individuals</string>
    <string name="settleUp">Settle up</string>
    <string name="Pay">Pay your friends back any time</string>
    <string name="getStarted">Let\'s get started</string>
    <string name="begin">Tap here to begin</string>
    <string name="login">log in</string>
    <string name="signup">sign up</string>
    <string name="splitwise">Splitwise</string>
    <string name="emailhint">Your email address</string>
    <string name="passwordhint">Your password</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="scancode">Scan code</string>
    <string name="Ratesplitwise">Rate Splitwise</string>
    <string name="Contactus">Contact us</string>
    <string name="Logout">Log out</string>
    <string name="Back">Back</string>
    <string name="Fullname">Full Name</string>
    <string name="emailaddress">Enter Email Address</string>
    <string name="Forgot_password">Forgot your password?</string>
    <string name="byusing_signup">By signing up, you accept the Splitwise Terms of Service</string>
    <string name="already_have_an_account">Already have an account? <font color='#01C6DB'>Login</font></string>
    <string name="with_you">With<font color='#949896'> you </font>and: </string>
    <string name="privacyPolicy">Privacy Policy :: Splitwise</string>
    <string name="TermsofService">Terms of Service :: Splitwise</string>
    <string name="privacy">Privacy</string>
    <string name="Terms">Terms</string>

</resources>