<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/loginlogo"
        android:src="@drawable/split_logo"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_150"/>
        <TextView
            android:layout_marginTop="@dimen/dp_50"
            android:textSize="@dimen/sp_28"
            android:textColor="@android:color/black"
            android:text="@string/splitwise"
            android:id="@+id/tvSplit"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/email"
        android:hint="@string/emailhint"
        android:textColor="@android:color/black"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/passwordhint"
        android:id="@+id/password"
        android:textColor="@android:color/black"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:id="@+id/btnback"
            android:text="@string/Back"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_marginRight="@dimen/dp_30"
            android:id="@+id/btnSave"
            android:text="@string/login"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <TextView
       android:layout_marginTop="@dimen/dp_30"
        android:layout_gravity="center"
        android:id="@+id/forgotpassword"
        android:text="@string/Forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>